recursion.logo.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
  if(level==0){avance()}
  else{
    sierpinski(level-1,length/3)
    droite(60)
    sierpinski(level-1,length/3)
    droite(60)
    sierpinski(level-1,length/3)
    droite(60)
  }
}